--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,25 +10,25 @@
 
 [[main]]
   name = "News"
-  url = "#post"
+  url = "post"
   weight = 20
 
 [[main]]
   name = "People"
-  url = "#people"
+  url = "people"
   weight = 30
 
 [[main]]
   name = "Events"
-  url = "#event"
+  url = "event"
   weight = 40
 
 [[main]]
   name = "Publications"
-  url = "#publication"
+  url = "publication"
   weight = 50
 
 [[main]]
   name = "Contact"
-  url = "#contact"
+  url = "contact"
   weight = 60
