--- a/data/themes/minimal-dark.toml
+++ b/data/themes/minimal-dark.toml
@@ -20,3 +20,5 @@ home_section_even = "rgb(247, 247, 247)"
 [dark]
   link = "#bbdefb"
   link_hover = "#bbdefb"
+  home_section_odd = "#272935"
+  home_section_even = "#23252f"
