--- a/data/themes/minimal-dark.toml
+++ b/data/themes/minimal-dark.toml
@@ -5,7 +5,7 @@ name = "Minimal-dark"
 light = false
 
 # Primary
-primary = "#1565c0"
+primary = "#123456"  # "#1565c0" 
 
 # Menu
 menu_primary = "#fff"
@@ -14,8 +14,8 @@ menu_text_active = "#2962ff"
 menu_title = "#2b2b2b"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "#654321"  # "#272935"
+home_section_even = "#23252f"
 
 [dark]
   link = "#bbdefb"
